# 5g-log-analyzer

./: .gitignore  analyzer.py  log_analyzer_plugin.py  pyproject.toml
tests/: test_plugin.py
